575
This is implemented as described here in the new collections, and Iterable.{min/max} are deprecated:
```scala
scala> scalax.collection.Sequence.empty ++ scalax.collection.Iterator.range(0,10)  
res0: scalax.collection.Sequence[Int] = List(0, 1, 2, 3, 4, 5, 6, 7, 8, 9)

scala> res0.max
<console>:6: error: no implicit argument matching parameter type Ordering[Int] was found.
       res0.max
       ^
```
...with the small caveat that there are no Ordering implementations for the standard types.  Fortunately there's a ticket open for that, so let's see about promoting scala/bug#1303.
